[package]
name = "dsa"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.2"

[[bin]]
name = "binary_search_algorithm"
path = "src/binary_search_algorithm.rs"

[[bin]]
name = "two_sum_leet_code"
path = "src/two_sum_leet_code.rs"

[[bin]]
name = "contains_nearby_duplicate"
path = "src/contains_nearby_duplicate.rs"

[[bin]]
name = "best_time_to_buy_and_sell_stock"
path = "src/best_time_to_buy_and_sell_stock.rs"

[[bin]]
name = "algo"
path = "src/algo.rs"

[[bin]]
name = "group_anagrams"
path = "src/group_anagrams.rs"